extended base template on home about about pages. fixed footer on base template

--- a/planit/main_app/templates/base.html
+++ b/planit/main_app/templates/base.html
@@ -63,8 +63,8 @@
     </main>
 
     <footer class="page-footer">
-        <div class="right">All Rights Reserved, &copy; 2023 SEI Mariposa Group 4 &nbsp;</div>
-        <div class="right">Jonah Angelo | Jeremiah Broom | Mindy Schwabenbauer | Korbin Westerfield &nbsp;</div>
+        <div>All Rights Reserved, &copy; 2023 SEI Mariposa Group 4 &nbsp;</div>
+        <div>Jonah Angelo | Jeremiah Broom | Mindy Schwabenbauer | Korbin Westerfield &nbsp;</div>
     </footer>
 
     <!-- Source for navnar using jquery:https://www.youtube.com/watch?v=5gHr8RfB0zs -->
