--- a/planit/main_app/templates/base.html
+++ b/planit/main_app/templates/base.html
@@ -35,7 +35,7 @@
                     <li><a href="">Add a Group</a></li>
                     <li><a href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
-                    <li><a href="">Sign Up</a></li>
+                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
                     <li><a href="{% url 'login' %}">Log In</a></li>
                     {% endif %}
                 </ul>
