Updated about page

--- a/planit/main_app/templates/about.html
+++ b/planit/main_app/templates/about.html
@@ -1,5 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>about</h1>
+<h1>About us</h1>
+
+<p>Welcome to Planit - the perfect event planning website for small groups of friends and family!
+    <br>
+    Our goal at Planit is to make planning events easier and more enjoyable for everyone involved. We understand that planning an event can be a daunting task, especially when it comes to coordinating with a group of people. That's where we come in - we offer a simple and user-friendly platform that allows you to create and share polls with your group, making it easy to gather feedback and make decisions as a team.
+    <br>
+    Whether you're planning a birthday party, a weekend getaway, or a family reunion, Planit can help. Our website allows you to create customized polls with multiple options, making it easy to gather feedback on everything from the date and time of the event to the location and activities. You can also add comments and suggestions to the polls, ensuring that everyone's voice is heard and considered.
+    <br>
+    At Planit, we believe that event planning should be a collaborative effort, and our website reflects that. We understand that everyone has different preferences and opinions when it comes to planning events, which is why we prioritize communication and collaboration on our platform. Our goal is to help you plan an event that everyone will enjoy and remember for years to come.
+    <br>
+    So why choose Planit for your next event? Our website is easy to use, completely free, and allows you to plan your event in a stress-free and enjoyable way. Plus, with our customizable polls and real-time feedback, you can rest assured that everyone in your group will have a say in the planning process.
+    <br>
+    Thank you for considering Planit for your next event. We look forward to helping you plan the perfect gathering!
+    
+    
+    
+    </p>
 {% endblock %}
