--- a/planit/main_app/templates/base.html
+++ b/planit/main_app/templates/base.html
@@ -29,7 +29,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{% url 'about' %}">About</a></li>
                     {% if user.is_authenticated %}
-                    <li><a href="">My Events</a></li>
+                    <li><a href="{% url 'index' %}">My Events</a></li>
                     <li><a href="">Add an Event</a></li>
                     <li><a href="">My Groups</a></li>
                     <li><a href="">Add a Group</a></li>
@@ -45,13 +45,13 @@
     <ul class="sidenav" id="mobile-links">
         <li><a href="{% url 'about' %}">About</a></li>
             {% if user.is_authenticated %}
-                <li><a href="">My Events</a></li>
+                <li><a href="{% url 'index' %}">My Events</a></li>
                 <li><a href="">Add an Event</a></li>
                 <li><a href="">My Groups</a></li>
                 <li><a href="">Add a Group</a></li>
                 <li><a href="{% url 'logout' %}">Log Out</a></li>
             {% else %} 
-                <li><a href="">Sign Up</a></li>   
+                <li><a href="{% url 'signup' %}">Sign Up</a></li>   
                 <li><a href="{% url 'login' %}">Log In</a></li>
            {% endif %}
     </ul>
