--- a/planit/main_app/templates/base.html
+++ b/planit/main_app/templates/base.html
@@ -30,7 +30,7 @@
                     <li><a href="{% url 'about' %}">About</a></li>
                     {% if user.is_authenticated %}
                     <li><a href="{% url 'index' %}">My Events</a></li>
-                    <li><a href="">Add an Event</a></li>
+                    <li><a href="{% url 'events_create' %}">Add an Event</a></li>
                     <li><a href="">My Groups</a></li>
                     <li><a href="">Add a Group</a></li>
                     <li><a href="{% url 'logout' %}">Log Out</a></li>
@@ -46,7 +46,7 @@
         <li><a href="{% url 'about' %}">About</a></li>
             {% if user.is_authenticated %}
                 <li><a href="{% url 'index' %}">My Events</a></li>
-                <li><a href="">Add an Event</a></li>
+                <li><a href="{% url 'events_create' %}">Add an Event</a></li>
                 <li><a href="">My Groups</a></li>
                 <li><a href="">Add a Group</a></li>
                 <li><a href="{% url 'logout' %}">Log Out</a></li>
