--- a/planit/main_app/templates/base.html
+++ b/planit/main_app/templates/base.html
@@ -31,7 +31,7 @@
                     {% if user.is_authenticated %}
                     <li><a href="">My Events</a></li>
                     <li><a href="">Add an Event</a></li>
-                    <li><a href="">My Groups</a></li>
+                    <li><a href="{% url 'groups_index' %}">My Groups</a></li>
                     <li><a href="">Add a Group</a></li>
                     <li><a href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
