--- a/planit/main_app/templates/base.html
+++ b/planit/main_app/templates/base.html
@@ -32,7 +32,7 @@
                     <li><a href="">My Events</a></li>
                     <li><a href="">Add an Event</a></li>
                     <li><a href="{% url 'groups_index' %}">My Groups</a></li>
-                    <li><a href="">Add a Group</a></li>
+                    <li><a href="{% url 'groups_create' %}">Add a Group</a></li>
                     <li><a href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
                     <li><a href="{% url 'signup' %}">Sign Up</a></li>
