--- a/planit/main_app/templates/main_app/groups_detail.html
+++ b/planit/main_app/templates/main_app/groups_detail.html
@@ -12,8 +12,8 @@
           <p>Creator: {{ group.creator }}</p>
         </div>
         <div class="card-action">
-          <a href="{% url 'groups_update' toy.id %}">Edit</a>
-          <a href="{% url 'groups_delete' toy.id %}">Delete</a>
+          <a href="{% url 'groups_update' group.id %}">Edit</a>
+          <a href="{% url 'groups_delete' group.id %}">Delete</a>
         </div>
       </div>
     </div>
