--- a/planit/main_app/templates/main_app/event_form.html
+++ b/planit/main_app/templates/main_app/event_form.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Add Event</h1>
+    {% if object%}
+        <h1>Edit {{ object.name }}</h1>
+    {% else %}
+        <h1>Add an Event</h1>
+    {% endif %}
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
   <form action="" method="POST">
     <!-- Django requires the following for security purposes -->
@@ -10,6 +14,6 @@
       <!-- Render the inputs inside of <tr>s & <td>s -->
       {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit!" class="btn">
+    <input type="submit" value="Submit" class="btn">
   </form>
 {% endblock %}
