fixed index template- displays all events data

--- a/planit/main_app/templates/events/index.html
+++ b/planit/main_app/templates/events/index.html
@@ -2,18 +2,14 @@
 {% block content %}
 
 <h1>My Events</h1>
-
-{% for event in eventes %}
-<a href="{% url 'detail' event.id %}">
-    <div class="card">
-        <div class="card-content">
-            <span class="card-title">{{ event.name }}</span>
-            <p>Who: {{ event.who}}</p>
-            <p>When: {{ event.when }} </p>
-            <p>What: {{ event.what|linebreaks }}</p>
-        </div>
+{% for event in events %}
+  <div class="card">
+    <div class="card-content">
+      <span class="card-title">{{ event.name }}</span>
+      <p>Who: {{ event.who }}</p>
+        <p>When: {{ event.when }}</p>
     </div>
-</a>
+  </div>
 {% endfor %}
 
 {% endblock %}
