--- a/planit/main_app/templates/main_app/group_detail.html
+++ b/planit/main_app/templates/main_app/group_detail.html
@@ -9,7 +9,7 @@
       <div class="card">
         <div class="card-content">
           <span class="card-title">{{ group.name }}</span>
-          <p>Creator: {{ group.creator }}</p>
+          <p>Creator: {{ request.user.username }}</p>
         </div>
         <div class="card-action">
           <a href="{% url 'groups_update' group.id %}">Edit</a>
