--- a/planit/main_app/templates/main_app/group_list.html
+++ b/planit/main_app/templates/main_app/group_list.html
@@ -8,7 +8,11 @@
     <div class="card">
         <div class="card-content">
             <span class="card-title">{{ group.name }}</span>
-            <p>Creator: {{ groups.creator }}</p>
+            {% if request.user.is_authenticated %}
+            <p>Creator: {{ request.user.username }}</p>
+            {% else %}
+            <p>Please log in to view who created this Group</p>
+            {% endif %}
         </div>
     </div>
   </a>
