--- a/planit/main_app/templates/events/index.html
+++ b/planit/main_app/templates/events/index.html
@@ -5,7 +5,7 @@
 {% for event in events %}
   <div class="card">
     <div class="card-content">
-      <span class="card-title">{{ event.name }}</span>
+      <a href="{% url 'detail' event.id %}"><span class="card-title">{{ event.name }}</span></a>
       <p>Who: {{ event.who }}</p>
         <p>When: {{ event.when }}</p>
     </div>
