--- a/planit/main_app/templates/main_app/group_detail.html
+++ b/planit/main_app/templates/main_app/group_detail.html
@@ -12,8 +12,8 @@
           <p>Creator: {{ group.creator }}</p>
         </div>
         <div class="card-action">
-          <a href="{% url 'groups_update' group.id %}">Edit</a>
-          <a href="{% url 'groups_delete' group.id %}">Delete</a>
+          {% comment %} <a href="{% url 'groups_update' group.id %}">Edit</a>
+          <a href="{% url 'groups_delete' group.id %}">Delete</a> {% endcomment %}
         </div>
       </div>
     </div>
