--- a/planit/main_app/templates/events/index.html
+++ b/planit/main_app/templates/events/index.html
@@ -3,5 +3,17 @@
 
 <h1>Event List</h1>
 
+{% for event in events %}
+  <div class="card">
+    <a href="{% url 'detail' event.id %}">
+    <div class="card-content">
+      <span class="card-title">{{ event.what }}</span>
+      <p>When: {{ event.when }}</p>
+      <p>Description: {{ event.why }}</p>
+    </div>
+    </a>
+  </div>
+{% endfor %}
+
 
 {% endblock %}
