--- a/planit/main_app/templates/events/index.html
+++ b/planit/main_app/templates/events/index.html
@@ -1,7 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Event List</h1>
+<h1>My Events</h1>
+{% for event in events %}
+  <div class="card">
+    <div class="card-content">
+      <a href="{% url 'detail' event.id %}"><span class="card-title">{{ event.name }}</span></a>
+      <p>Who: {{ event.who }}</p>
+        <p>When: {{ event.when }}</p>
+    </div>
+  </div>
+{% endfor %}
 
 
 {% endblock %}
