--- a/planit/main_app/templates/home.html
+++ b/planit/main_app/templates/home.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 
-<h1>Home</h1>
+<section>
+    <div class="mainContent">
+        <h1>Welcome to Plan<span class="it">It</span></h1>
+            <div class="contentBtnDiv">
+                <a href="/views/signUp.html" class="contentBtn">Sign up to get Started</a>
+            </div>
+    </div>
+    <div class="stars1"></div>
+    <div class="stars2"></div>
+    <div class="stars3"></div>
+</section>
 
 {% endblock %}
