end of day commit

--- a/planit/main_app/templates/home.html
+++ b/planit/main_app/templates/home.html
@@ -4,11 +4,11 @@
 
 <section>
     <div class="mainContent">
-        <h1>Welcome to Plan<span class="it">It</span></h1>
+        <h1 class="homeTitle">Welcome to Plan<span class="it">It</span></h1>
             <div class="contentBtnDiv">
-                <a href="/views/signUp.html" class="contentBtn">Sign up to get Started</a>
+                <a href="{% url 'signup' %}" class="contentBtn">Sign up to get Started</a>
             </div>
-    </div>
+        </div>
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
