--- a/planit/main_app/static/css/styles.css
+++ b/planit/main_app/static/css/styles.css
@@ -62,11 +62,24 @@ h1 {
     bottom: 65%;
 }
 
+.homeTitle {
+    color: white;
+    text-align: center;
+    background-color: transparent;
+    margin-bottom: 5px;
+    position: absolute;
+    top: 25%;
+    bottom: 65%;
+    width: 100vw;
+    z-index: 4;
+}
+
 .aboutTitle {
     position: relative;
     left: 5%;
     right: 5%;
     top: 40px;
+    z-index: 3;
 }
 
 .aboutContent {
@@ -74,12 +87,12 @@ h1 {
     color: white;
     left: 5%;
     right: 5%;
-    top: 5%;
+    top: 17%;
     border-top: 3px solid #0D324D;
-    padding: 10px 30px 20px 30px;
+    padding: 10px 30px 90px 30px;
     font-size: 17px;
     background-color: transparent;
-    z-index: 4;
+    z-index: 3;
 }
 
 .aboutParagraphContainer {
@@ -104,6 +117,7 @@ h1 {
     right: 5%;
     top: 37.5%;
     bottom: 62.5%;
+    width: 100vw;
 }
 
 .contentBtn:hover {
@@ -115,11 +129,12 @@ h1 {
 section {
     position: absolute;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     overflow: hidden;
     justify-content: center;
     align-items: center;
     left: 0;
+    top: 0;
 }
 
 .stars1 {
