--- a/planit/main_app/static/css/styles.css
+++ b/planit/main_app/static/css/styles.css
@@ -69,6 +69,7 @@ h1 {
     margin-bottom: 5px;
     position: absolute;
     top: 25%;
+    left: 0;
     bottom: 65%;
     width: 100vw;
     z-index: 4;
@@ -113,8 +114,7 @@ h1 {
     text-decoration: none;
     background-color: transparent;
     position: absolute;
-    left: 5%;
-    right: 5%;
+    left: 0;
     top: 37.5%;
     bottom: 62.5%;
     width: 100vw;
