--- a/planit/main_app/templates/home.html
+++ b/planit/main_app/templates/home.html
@@ -5,9 +5,15 @@
 <section>
     <div class="mainContent">
         <h1 class="homeTitle">Welcome to Plan<span class="it">It</span></h1>
-            <div class="contentBtnDiv">
-                <a href="{% url 'signup' %}" class="contentBtn">Sign up to get Started</a>
-            </div>
+             {% if user.is_authenticated %}
+                <div class="contentBtnDiv">
+                    <a href="{% url 'groups_index' %}" class="contentBtn">View Events</a>
+                </div>
+            {% else %}
+                <div class="contentBtnDiv">
+                    <a href="{% url 'signup' %}" class="contentBtn">Sign up to get Started</a>
+                </div>
+            {% endif %}
         </div>
     <div class="stars1"></div>
     <div class="stars2"></div>
