--- a/planit/main_app/templates/main_app/event_form.html
+++ b/planit/main_app/templates/main_app/event_form.html
@@ -10,10 +10,16 @@
   <form action="" method="POST">
     <!-- Django requires the following for security purposes -->
     {% csrf_token %}
-    <table>
-      <!-- Render the inputs inside of <tr>s & <td>s -->
-      {{ form.as_table }}
-    </table>
+    <label for ="what">Event Name:</label>
+    {{ form.what }}
+    <label for ="when">Date:</label>
+    <input type="date" name="when" id="when" value="{{ object.when|date:'Y-m-d' }}">
+    <label for ="why">Description:</label>
+    {{ form.why }}
+    <label for ="where">Location:</label>
+    {{ form.where }}
+    <label for ="who">Attendees:</label>
+    {{ form.who }}
     <input type="submit" value="Submit" class="btn">
   </form>
 {% endblock %}
