--- a/planit/main_app/templates/main_app/event_form.html
+++ b/planit/main_app/templates/main_app/event_form.html
@@ -7,19 +7,25 @@
         <h1>Add an Event</h1>
     {% endif %}
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
-  <form action="/events/create" method="POST" style="margin-top: 80px;">
+  <form action="" method="POST" style="margin-top: 100px; background-color: white;">
     <!-- Django requires the following for security purposes -->
     {% csrf_token %}
-    <label for ="what">Event Name:</label>
-    {{ form.what }}
-    <label for ="when">Date:</label>
-    <input type="date" name="when" id="when" value="{{ object.when|date:'Y-m-d' }}">
-    <label for ="why">Description:</label>
-    {{ form.why }}
-    <label for ="where">Location:</label>
-    {{ form.where }}
-    <label for ="who">Attendees:</label>
-    {{ form.who }}
+    <table>
+      <!-- Render the inputs inside of <tr>s & <td>s -->
+      {{ form.as_table }}
+    </table>
     <input type="submit" value="Submit" class="btn">
   </form>
+
+<script>
+  const dateEl = document.getElementById('id_when');
+  // M is Materialize's global variable
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+</script>
+
 {% endblock %}
