--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -24,21 +24,23 @@
 <br>
 <h2 style="color:white;" >Polls: </h2>
 <a href="">Create a new poll</a>
-<div class="row">
-        <div class="card">
-            <div class="card-content">
-                <span class="card-title">{{ poll.question }}</span>
-                <p>Option 1:  {{ poll.choice_one }} </p>
-                <p>Option 2: {{ poll.choice_two }} </p>
-                <p>Option 3: {{ poll.choice_three }} </p>
+<form action="" method="POST">
+    {% csrf_token %}
+    <div class="row">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">{{ poll.question }}</span>
+                    <p>Option 1:  {{ poll.choice_one }} </p>
+                    <p>Option 2: {{ poll.choice_two }} </p>
+                    <p>Option 3: {{ poll.choice_three }} </p>
+                </div>
+               {% comment %} <div class="card-action">
+                    <a href="{% url 'events_update' event.id %}">Edit</a>
+                    <a href="{% url 'events_delete' event.id %}">Delete</a>
+                </div>  {% endcomment %}
             </div>
-           {% comment %} <div class="card-action">
-                <a href="{% url 'events_update' event.id %}">Edit</a>
-                <a href="{% url 'events_delete' event.id %}">Delete</a>
-            </div>  {% endcomment %}
-        </div>
-
-</div>
+    </div>
+</form>
 
 
 {% endblock %}
