--- a/planit/main_app/static/css/styles.css
+++ b/planit/main_app/static/css/styles.css
@@ -51,18 +51,6 @@ nav {
 
 /* CONTENT */
 /* ------------------------------------------ */
-h1 {
-    color: white;
-    text-align: center;
-    background-color: transparent;
-    margin-bottom: 5px;
-    position: absolute;
-    left: 5%;
-    right: 5%;
-    top: 25%;
-    bottom: 65%;
-}
-
 .homeTitle {
     color: white;
     text-align: center;
@@ -99,6 +87,100 @@ h1 {
 
 .aboutParagraphContainer {
     height: 80%;
+}
+
+.signUpTitle {
+    left: 5%;
+    right: 5%;
+    top: 0px;
+    z-index: 3;
+    color: white;
+    font-size: 2.5rem;
+    margin: 0;
+    padding-bottom: 5px;
+    text-align: center;
+}
+
+.redText {
+    color: red;
+}
+
+.signUpContainer {
+    color: #7589ad;
+    width: 60%;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    left: 20%;
+    right: 20%;
+    background-color: #0D324D;
+    padding: 15px;
+    z-index: 3;
+    margin-top: 25%;
+}
+
+label {
+    color: white;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+    color: white;
+    font-family: 'Orbitron', sans-serif;
+}
+  
+input[type=text]:focus, input[type=password]:focus {
+    background-color: #7589ad;
+    outline: none;
+    border-bottom: 1.5px solid white !important;
+    color: white;
+    font-family: 'Orbitron', sans-serif;
+}
+  
+hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+}
+
+.btn {
+    background-color: #7F5A83;
+    text-decoration: none;
+    color: white;
+    margin-right: 5px;
+    width: 50%;
+    text-align: center;
+    align-items: center !important;
+    margin-left: 25% !important;
+    margin-top: 7px;
+}
+
+.btn:hover {
+    background-color: #ab76b1;
+    text-decoration: none;
+    color: white;
+    margin-right: 5px;
+    width: 50%;
+    text-align: center;
+    align-items: center !important;
+}
+
+.logInContainer {
+    color: white;
+    width: 60%;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    left: 20%;
+    right: 20%;
+    margin-top: 35%;
+    background-color: #0D324D;
+    padding: 15px;
+    z-index: 5;
 }
 
 .it {
