--- a/planit/main_app/templates/registration/signup.html
+++ b/planit/main_app/templates/registration/signup.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="signUpContainer">
+  <h1 class="signUpTitle">Sign <span class="it">Up</span></h1>
 
-<h1>Sign Up</h1>
+  <p class="redText">{{ error_message }}</p>
 
-<p class="red-text">{{ error_message }}</p>
-
-<form method="POST" action="{% url 'signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" class="btn" value="Sign Up">
-</form>
+  <form method="POST" action="{% url 'signup' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" class="btn" id="signUpBtn" value="Sign Up">
+  </form>
+</div>
 
 {% endblock %}
