fixed side nav styling

--- a/planit/main_app/static/css/styles.css
+++ b/planit/main_app/static/css/styles.css
@@ -49,6 +49,19 @@ nav {
     text-decoration: none;
 }
 
+.sidenav {
+    background-color: #0D324D;
+}
+
+.whiteText {
+    color: white !important;
+}
+
+.whiteText:hover {
+    color: white !important;
+    background-color: #7589ad !important;
+}
+
 /* CONTENT */
 /* ------------------------------------------ */
 .homeTitle {
