Jonah- added polls form, url and view for detail and create

--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -2,7 +2,6 @@
 {% block content %}
 
 <h1>Event Details</h1>
-<p> {{ event.name }} </p>
 
 <div class="row">
         <div class="card">
@@ -22,18 +21,21 @@
 
 </div>
 <br>
-<h2 style="color:white;" >Polls: </h2>
-<a href="">Create a new poll</a>
+<h2 style="color:white;">Polls: </h2>
+<a href="{% url 'polls_create' %}">Create a new poll</a>
 <form action="" method="POST">
     {% csrf_token %}
     <div class="row">
+        {% for poll in polls %}
             <div class="card">
                 <div class="card-content">
+                <a href="{% url 'polls_detail' poll.id %}">Poll Details</a>
                     <span class="card-title">{{ poll.question }}</span>
                     <p>Option 1:  {{ poll.choice_one }} </p>
                     <p>Option 2: {{ poll.choice_two }} </p>
                     <p>Option 3: {{ poll.choice_three }} </p>
                 </div>
+                {% endfor %}
                {% comment %} <div class="card-action">
                     <a href="{% url 'events_update' event.id %}">Edit</a>
                     <a href="{% url 'events_delete' event.id %}">Delete</a>
@@ -41,6 +43,5 @@
             </div>
     </div>
 </form>
-
 
 {% endblock %}
