--- a/planit/main_app/templates/main_app/event_form.html
+++ b/planit/main_app/templates/main_app/event_form.html
@@ -7,7 +7,7 @@
         <h1>Add an Event</h1>
     {% endif %}
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
-  <form action="" method="POST" style="margin-top: 100px; background-color: white;">
+  <form action="" method="POST">
     <!-- Django requires the following for security purposes -->
     {% csrf_token %}
     <table>
