--- a/planit/main_app/static/css/styles.css
+++ b/planit/main_app/static/css/styles.css
@@ -83,6 +83,37 @@ nav {
     }
 }
 
+@media screen and (max-width: 536px) {
+    .aboutContent {
+        position: absolute;
+        color: white;
+        left: 5%;
+        right: 5%;
+        top: 25% !important;
+        border-top: 3px solid #0D324D;
+        padding: 10px 30px 90px 30px;
+        font-size: 17px;
+        background-color: transparent;
+        z-index: 3;
+    }
+    
+    .aboutParagraphContainer {
+        height: 80%;
+    }
+
+    section {
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+        left: 0;
+        top: 0;
+    }
+}
+
 .homeTitle {
     color: white;
     text-align: center;
@@ -99,10 +130,13 @@ nav {
 }
 
 .aboutTitle {
+    text-align: center;
+    color: white;
     position: relative;
-    left: 5%;
-    right: 5%;
+    left: 20%;
+    right: 40%;
     top: 40px;
+    width: 60%;
     z-index: 3;
 }
 
@@ -150,7 +184,8 @@ nav {
     background-color: #0D324D;
     padding: 15px;
     z-index: 3;
-    margin-top: 25%;
+    margin-top: 20%;
+    margin-bottom: 20%;
 }
 
 label {
@@ -211,7 +246,8 @@ hr {
     justify-content: center;
     left: 20%;
     right: 20%;
-    margin-top: 35%;
+    margin-top: 30%;
+    margin-bottom: 40%;
     background-color: #0D324D;
     padding: 15px;
     z-index: 5;
