--- a/planit/main_app/templates/events/index.html
+++ b/planit/main_app/templates/events/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>My Events</h1>
+<h1 class="aboutTitle">My Events</h1>
 {% for event in events %}
   <div class="card">
     <div class="card-content">
