--- a/planit/main_app/templates/main_app/group_list.html
+++ b/planit/main_app/templates/main_app/group_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Group List</h1>
+<h1 class="aboutTitle">Group List</h1>
 
 {% for group in group_list %}
   <a href="{% url 'groups_detail' group.id %}">
