--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -26,10 +26,10 @@
 <form action="" method="POST">
     {% csrf_token %}
     <div class="row">
-        {% for poll in polls %}
+        {% for poll in event.poll_set.all %}
             <div class="card">
                 <div class="card-content">
-                <a href="{% url 'polls_detail' poll.id %}">Poll Details</a>
+                {% comment %} <a href="{% url 'polls_detail' poll.id %}">Poll Details</a> {% endcomment %}
                     <span class="card-title">{{ poll.question }}</span>
                     <p>Option 1:  {{ poll.choice_one }} </p>
                     <p>Option 2: {{ poll.choice_two }} </p>
