--- a/planit/main_app/templates/home.html
+++ b/planit/main_app/templates/home.html
@@ -5,7 +5,7 @@
     <h1 class="homeTitle">Welcome to Plan<span class="it">It</span></h1>
          {% if user.is_authenticated %}
             <div class="contentBtnDiv">
-                <a href="{% url 'groups_index' %}" class="contentBtn">View Events</a>
+                <a href="{% url 'index' %}" class="contentBtn">View Events</a>
             </div>
         {% else %}
             <div class="contentBtnDiv">
