update poll_form view and url to display the poll form page.

--- a/planit/main_app/templates/main_app/poll_form.html
+++ b/planit/main_app/templates/main_app/poll_form.html
@@ -9,7 +9,7 @@
 {% csrf_token %}
 
 <label for="question">Enter Poll Question:</label>
-{% render_field %}
+{% comment %} {% render_field %} {% endcomment %}
 <button class="btn">Add Poll</button>
 
 </form>
