reconfigured polls model, updated polls views and urls

--- a/planit/main_app/templates/main_app/poll_form.html
+++ b/planit/main_app/templates/main_app/poll_form.html
@@ -9,10 +9,8 @@
 {% csrf_token %}
 
 <label for="question">Enter Poll Question:</label>
-{% render_field %}
-<button class="btn">Add Poll</button>
-
+{{ form.as_table }}
+<input type="submit" value="Submit" class="btn">
 </form>
 
 {% endblock %}
-    
