fixed positioning on base pages

--- a/planit/main_app/templates/about.html
+++ b/planit/main_app/templates/about.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <h1 class="aboutTitle">About <span class="it">us</span></h1>
 
 <p class="aboutContent">Welcome to Planit - the perfect event planning website for small groups of friends and family!
@@ -31,9 +32,9 @@
     <br>
     Thank you for considering Planit for your next event. We look forward to helping you plan the perfect gathering!
 </p>
-<section>
+<div class="stars">
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
-</section>
+</div>
 {% endblock %}
