--- a/planit/main_app/templates/home.html
+++ b/planit/main_app/templates/home.html
@@ -13,10 +13,10 @@
             </div>
         {% endif %}
 </div>
-<section>
+<div class="stars">
     <div class="stars1"></div>
     <div class="stars2"></div>
     <div class="stars3"></div>
-</section>
+</div>
 
 {% endblock %}
