--- a/planit/main_app/static/css/styles.css
+++ b/planit/main_app/static/css/styles.css
@@ -72,7 +72,6 @@ nav {
         position: absolute;
         left: 0;
         top: 45% !important;
-        /* bottom: %; */
         width: 100vw;
     }
     
@@ -101,17 +100,6 @@ nav {
         height: 80%;
     }
 
-    section {
-        display: none;
-        position: absolute;
-        width: 100%;
-        height: 100vh;
-        overflow: hidden;
-        justify-content: center;
-        align-items: center;
-        left: 0;
-        top: 0;
-    }
 }
 
 .homeTitle {
@@ -119,7 +107,7 @@ nav {
     text-align: center;
     background-color: transparent;
     margin-bottom: 5px;
-    position: absolute;
+    position: fixed;
     top: 25%;
     left: 0;
     bottom: 65%;
@@ -135,9 +123,9 @@ nav {
     position: relative;
     left: 20%;
     right: 40%;
-    top: 40px;
     width: 60%;
     z-index: 3;
+    margin: 0;
 }
 
 .aboutContent {
@@ -145,12 +133,12 @@ nav {
     color: white;
     left: 5%;
     right: 5%;
-    top: 17%;
     border-top: 3px solid #0D324D;
     padding: 10px 30px 90px 30px;
     font-size: 17px;
     background-color: transparent;
     z-index: 3;
+
 }
 
 .aboutParagraphContainer {
@@ -176,7 +164,7 @@ nav {
 .signUpContainer {
     color: #7589ad;
     width: 60%;
-    position: absolute;
+    position: fixed;
     align-items: center;
     justify-content: center;
     left: 20%;
@@ -186,6 +174,7 @@ nav {
     z-index: 3;
     margin-top: 20%;
     margin-bottom: 20%;
+    top: 0;
 }
 
 label {
@@ -241,16 +230,17 @@ hr {
 .logInContainer {
     color: white;
     width: 60%;
-    position: absolute;
+    position: fixed;
     align-items: center;
     justify-content: center;
     left: 20%;
     right: 20%;
-    margin-top: 30%;
+    margin-top: 20%;
     margin-bottom: 40%;
     background-color: #0D324D;
     padding: 15px;
     z-index: 5;
+    top: 0;
 }
 
 .datepicker-container {
@@ -296,6 +286,13 @@ hr {
     color: white !important;
 }
 
+.container {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    right: 10%;
+}
+
 .btn-flat {
     color: #7F5A83;
 }
@@ -313,11 +310,12 @@ hr {
     color: #124569;
     text-decoration: none;
     background-color: transparent;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 37.5%;
     bottom: 62.5%;
     width: 100vw;
+    z-index: 4;
 }
 
 .contentBtn:hover {
@@ -326,15 +324,13 @@ hr {
     background-color: transparent;
 }
 
-section {
-    position: absolute;
-    width: 100%;
+.stars {
+    position: fixed;
+    width: 100vw;
     height: 100vh;
     overflow: hidden;
-    justify-content: center;
-    align-items: center;
-    left: 0;
     top: 0;
+    left: 0;
 }
 
 .stars1 {
