--- a/planit/main_app/templates/registration/signup.html
+++ b/planit/main_app/templates/registration/signup.html
@@ -11,9 +11,9 @@
     <input type="submit" class="btn" id="signUpBtn" value="Sign Up">
   </form>
 </div>
-<section>
+<div class="stars">
   <div class="stars1"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
-</section>
+</div>
 {% endblock %}
