--- a/planit/main_app/templates/main_app/group_detail.html
+++ b/planit/main_app/templates/main_app/group_detail.html
@@ -9,11 +9,11 @@
       <div class="card">
         <div class="card-content">
           <span class="card-title">{{ group.name }}</span>
-          <p>Creator: {{ request.user.username }}</p>
+          <p class="cardDetails">Creator: {{ request.user.username }}</p>
         </div>
         <div class="card-action">
-          <a href="{% url 'groups_update' group.id %}">Edit</a>
-          <a href="{% url 'groups_delete' group.id %}">Delete</a> 
+          <a class="itLight" href="{% url 'groups_update' group.id %}">Edit</a>
+          <a class="deleteBtn" href="{% url 'groups_delete' group.id %}">Delete</a> 
         </div>
       </div>
     </div>
