--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -23,14 +23,16 @@
 <br>
 <h2 style="color:white;">Polls: </h2>
 <a href="{% url 'polls_create' %}">Create a new poll</a>
+<h2 style="color:white;">Polls: </h2>
+<a href="{% url 'polls_create' %}">Create a new poll</a>
 <form action="" method="POST">
     {% csrf_token %}
     <div class="row">
+
         {% for poll in event.poll_set.all %}
             <div class="card">
                 <div class="card-content">
-                {% comment %} <a href="{% url 'polls_detail' poll.id %}">Poll Details</a> {% endcomment %}
->>>>>>> 7c360829e07cfc757b39d4c843d4e3f23ca8ff55
+                    {% comment %} <a href="{% url 'polls_detail' poll.id %}">Poll Details</a> {% endcomment %}
                     <span class="card-title">{{ poll.question }}</span>
                     <p>Option 1:  {{ poll.choice_one }} </p>
                     <p>Option 2: {{ poll.choice_two }} </p>
