--- a/planit/main_app/templates/main_app/group_form.html
+++ b/planit/main_app/templates/main_app/group_form.html
@@ -5,7 +5,7 @@
     {% if object %}
         <h1 class="addGroupTitle">Edit {{object.name}}</h1>
     {% else %}
-        <h1 class="addGroupTitle">Add Group</h1>
+        <h1 class="addGroupTitle">Add <span class="it">Group</span></h1>
     {% endif %}
     <!-- Leaving the action empty makes the form post to the same url used to display it -->
     <form action="" method="POST">
