--- a/planit/main_app/templates/events/detail.html
+++ b/planit/main_app/templates/events/detail.html
@@ -39,7 +39,7 @@
                 <div class="card-action">
                     <a href="{% url 'events_update' event.id %}">Edit</a>
                     <a href="{% url 'events_delete' event.id %}">Delete</a>
-                </div>  \
+                </div>  
             </div>
     </div>
 </form>
